Refactor/pharmacies ticker (#30)
* perf(app.yaml): reduce source

* refactor(pharmacy): sync data

Move sync data to cloud schedule and cloud run maskcli
