# internal/app/pharmacy/endpoints/endpoints.go
@@ -2,7 +2,6 @@ package endpoints
 
 import (
 	"context"
-
 	"github.com/go-kit/kit/endpoint"
 	"github.com/go-kit/kit/log"
 
@@ -14,11 +13,8 @@ import (
 // meant to be used as a helper struct, to collect all of the endpoints into a
 // single parameter.
 type Endpoints struct {
-	QueryEndpoint       endpoint.Endpoint `json:""`
-	SyncEndpoint        endpoint.Endpoint `json:""`
-	SyncHandlerEndpoint endpoint.Endpoint `json:""`
-	FootGunEndpoint     endpoint.Endpoint `json:""`
-	HealthCheckEndpoint endpoint.Endpoint `json:""`
+	QueryEndpoint        endpoint.Endpoint `json:""`
+	TickerUpdateEndpoint endpoint.Endpoint `json:""`
 }
 
 // New return a new instance of the endpoint that wraps the provided service.
@@ -31,36 +27,12 @@ func New(svc service.PharmacyService, logger log.Logger) (ep Endpoints) {
 		ep.QueryEndpoint = queryEndpoint
 	}
 
-	var syncEndpoint endpoint.Endpoint
+	var tickerUpdateEndpoint endpoint.Endpoint
 	{
-		method := "sync"
-		syncEndpoint = MakeSyncEndpoint(svc)
-		syncEndpoint = LoggingMiddleware(log.With(logger, "method", method))(syncEndpoint)
-		ep.SyncEndpoint = syncEndpoint
-	}
-
-	var syncHandlerEndpoint endpoint.Endpoint
-	{
-		method := "syncHandler"
-		syncHandlerEndpoint = MakeSyncHandlerEndpoint(svc)
-		syncHandlerEndpoint = LoggingMiddleware(log.With(logger, "method", method))(syncHandlerEndpoint)
-		ep.SyncHandlerEndpoint = syncHandlerEndpoint
-	}
-
-	var footGunEndpoint endpoint.Endpoint
-	{
-		method := "footGun"
-		footGunEndpoint = MakeFootGunEndpoint(svc)
-		footGunEndpoint = LoggingMiddleware(log.With(logger, "method", method))(footGunEndpoint)
-		ep.FootGunEndpoint = footGunEndpoint
-	}
-
-	var healthCheckEndpoint endpoint.Endpoint
-	{
-		method := "healthCheck"
-		healthCheckEndpoint = MakeHealthCheckEndpoint(svc)
-		healthCheckEndpoint = LoggingMiddleware(log.With(logger, "method", method))(healthCheckEndpoint)
-		ep.HealthCheckEndpoint = healthCheckEndpoint
+		method := "tickerUpdate"
+		tickerUpdateEndpoint = MakeTickerUpdateEndpoint(svc)
+		tickerUpdateEndpoint = LoggingMiddleware(log.With(logger, "method", method))(tickerUpdateEndpoint)
+		ep.TickerUpdateEndpoint = tickerUpdateEndpoint
 	}
 
 	return ep
@@ -98,90 +70,22 @@ func (e Endpoints) Query(ctx context.Context, centerLng float64, centerLat float
 	return response.Items, nil
 }
 
-// MakeSyncEndpoint returns an endpoint that invokes Sync on the service.
+// MakeTickerUpdateEndpoint returns an endpoint that invokes TickerUpdate on the service.
 // Primarily useful in a server.
-func MakeSyncEndpoint(svc service.PharmacyService) (ep endpoint.Endpoint) {
+func MakeTickerUpdateEndpoint(svc service.PharmacyService) (ep endpoint.Endpoint) {
 	return func(ctx context.Context, _ interface{}) (interface{}, error) {
-		err := svc.Sync(ctx)
-		return SyncResponse{}, err
+		err := svc.TickerUpdate(ctx)
+		return TickerUpdateResponse{}, err
 	}
 }
 
-// Sync implements the service interface, so Endpoints may be used as a service.
+// TickerUpdate implements the service interface, so Endpoints may be used as a service.
 // This is primarily useful in the context of a client library.
-func (e Endpoints) Sync(ctx context.Context) (err error) {
-	resp, err := e.SyncEndpoint(ctx, SyncRequest{})
+func (e Endpoints) TickerUpdate(ctx context.Context) (err error) {
+	resp, err := e.TickerUpdateEndpoint(ctx, TickerUpdateRequest{})
 	if err != nil {
 		return
 	}
-	_ = resp.(SyncResponse)
+	_ = resp.(TickerUpdateResponse)
 	return nil
-}
-
-// MakeSyncHandlerEndpoint returns an endpoint that invokes SyncHandler on the service.
-// Primarily useful in a server.
-func MakeSyncHandlerEndpoint(svc service.PharmacyService) (ep endpoint.Endpoint) {
-	return func(ctx context.Context, request interface{}) (interface{}, error) {
-		req := request.(SyncHandlerRequest)
-		if err := req.validate(); err != nil {
-			return SyncHandlerResponse{}, err
-		}
-		err := svc.SyncHandler(ctx, req.QueueName, req.TaskName)
-		return SyncHandlerResponse{}, err
-	}
-}
-
-// SyncHandler implements the service interface, so Endpoints may be used as a service.
-// This is primarily useful in the context of a client library.
-func (e Endpoints) SyncHandler(ctx context.Context, queueName string, taskName string) (err error) {
-	resp, err := e.SyncHandlerEndpoint(ctx, SyncHandlerRequest{QueueName: queueName, TaskName: taskName})
-	if err != nil {
-		return
-	}
-	_ = resp.(SyncHandlerResponse)
-	return nil
-}
-
-// MakeFootGunEndpoint returns an endpoint that invokes FootGun on the service.
-// Primarily useful in a server.
-func MakeFootGunEndpoint(svc service.PharmacyService) (ep endpoint.Endpoint) {
-	return func(ctx context.Context, _ interface{}) (interface{}, error) {
-		err := svc.FootGun(ctx)
-		return FootGunResponse{}, err
-	}
-}
-
-// FootGun implements the service interface, so Endpoints may be used as a service.
-// This is primarily useful in the context of a client library.
-func (e Endpoints) FootGun(ctx context.Context) (err error) {
-	resp, err := e.FootGunEndpoint(ctx, FootGunRequest{})
-	if err != nil {
-		return
-	}
-	_ = resp.(FootGunResponse)
-	return nil
-}
-
-// MakeHealthCheckEndpoint returns an endpoint that invokes FootGun on the service.
-// Primarily useful in a server.
-func MakeHealthCheckEndpoint(svc service.PharmacyService) (ep endpoint.Endpoint) {
-	return func(ctx context.Context, request interface{}) (interface{}, error) {
-		req := request.(HealthCheckRequest)
-		if err := req.validate(); err != nil {
-			return HealthCheckResponse{}, err
-		}
-		updated, err := svc.HealthCheck(ctx)
-		return HealthCheckResponse{Updated: updated}, err
-	}
-}
-
-// FootGun implements the service interface, so Endpoints may be used as a service.
-// This is primarily useful in the context of a client library.
-func (e Endpoints) HealthCheck(ctx context.Context) (updated string, err error) {
-	resp, err := e.HealthCheckEndpoint(ctx, HealthCheckRequest{})
-	if err != nil {
-		return
-	}
-	response := resp.(HealthCheckResponse)
-	return response.Updated, nil
 }
